# crudlisk

./: .gitignore  README.md  pyproject.toml  requirements.txt
crudlisk/: app.py
crudlisk/blueprints/: db.py  home.py  login.py  logoff.py  register.py  unsign.py
crudlisk/ext/: db.py  migration.py  models.py
instance/: database.db
migrations/versions/: 20d1984bcfcf_initial_migration.py
tests/: test_cli.py
