[tool.poetry]
name = "crudlisk"
version = "0.1.0"
description = ""
authors = ["felbfreire <felbfreire@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
